fix: show sharing modal on mobile

--- a/src/drive/styles/topbar.styl
+++ b/src/drive/styles/topbar.styl
@@ -12,4 +12,4 @@ $coz-bar-size = 3rem
 
 +small-screen()
     .fil-topbar
-        display none
+        margin 0
